fixed iframe pos for supporting materials, fixed z-index issue with dropdown

--- a/app/assets/stylesheets/corespring-ng-components/multi-select.less
+++ b/app/assets/stylesheets/corespring-ng-components/multi-select.less
@@ -19,6 +19,7 @@
 
   .chooser {
     position: absolute;
+    z-index: 100006;
     padding: 5px;
     border-radius: 5px;
     -moz-border-radius: 5px;
